<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Fragment2">


    <Button
        android:id="@+id/add2"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginBottom="29dp"
        android:text="@string/add"
        android:textSize="11sp"
        app:cornerRadius="300dp"
        app:icon="@drawable/add"
        app:iconSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/downbanner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/back2"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        app:cornerRadius="300dp"
        app:icon="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/image2"
        android:layout_width="277dp"
        android:layout_height="268dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:text="@string/product"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2"
        tools:ignore="ExtraText">>

        <TextView
            android:id="@+id/talla"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/talla"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/talla1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talla1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/talla2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talla2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/talla3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talla3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/talla4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talla4" />

        <com.google.android.material.chip.Chip
            android:id="@+id/talla5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talla5" />

    </com.google.android.material.chip.ChipGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup">


        <TextView
            android:id="@+id/Color"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal"
            android:text="@string/color"
            android:textAlignment="center"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/color1"
            android:button="@null" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/color2"
            android:button="@null" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/color3"
            android:button="@null" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/color4"
            android:button="@null" />

    </RadioGroup>

    <Button
        android:id="@+id/carrito2"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        app:cornerRadius="300dp"
        app:icon="@drawable/carrito"
        app:iconSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <Button
            android:id="@+id/add1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/add"
            android:gravity="center_vertical|end"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/cantidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Cantidad" />

        <Button
            android:id="@+id/remove2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/remove"
            android:gravity="center_vertical|end"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/downbanner2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTabBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/precio2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/dollar"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/price"
            android:textSize="34sp"
            tools:ignore="UseCompatTextViewDrawableXml"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="2dp" />


    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>