<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/container"
        android:backgroundTint="@color/red"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameShoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/product"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/dollar" />

                <TextView
                    android:id="@+id/priceShoe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="@string/price"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/colorCart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/color2" />

                <TextView
                    android:id="@+id/tallaCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/talla" />

                <TextView
                    android:id="@+id/tallaCart2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:text="@string/talla4" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Cantidad2" />

                <TextView
                    android:id="@+id/CantidadCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Cantidad"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/quitarCart"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/trash"
                    android:gravity="center_vertical|end"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>